--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -214,7 +214,9 @@ $(document).ready(function(){
                         <td><span class="status text-success">&bull;</span> Active</td>
                         <td>
             
-                            <a href="#" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE5C9;</i></a>
+                            <a href="{{ url_for('delete', username=user.name) }}" class="delete" title="Delete" onclick="return confirm('Do you want to permanently delete user {{ user.name }}?');" data-toggle="tooltip"><i class="material-icons">&#xE5C9;</i></a>
+                            
+
                         </td>
                     </tr>
                     </a>
